<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="add_hst">Add HST</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="tip">Tip %</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="number_of_people"># of people</string>
    <string-array name="tip_percent">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>other</item>
    </string-array>
    <string-array name="number_of_people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
